2008-06-17  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/NodeCommandHandler.cs,
	  MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs: Handle delete commands
	  in the base node command handler instead of the tree view, so that
	  subclassed command handlers can override them properly.
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs: Don't
	  allow deleting child files. Fix bad casting pattern. 
	* MonoDevelop.Ide.Tasks/TaskService.cs: Avoid an exception on closing
	  solutions without user tasks.

2008-06-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.mdp, Makefile.am: Fixed makefile.

2008-06-17  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ClassBrowser/ClassBrowserPadWidget.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Pads.ClassBrowser.ClassBrowserPadWidget.cs:
	  Changed class browser widget.

2008-06-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs: Fix
	  nullref (bug #400317).

2008-06-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Debugging/DebuggingService.cs: Dispose the debug
	  session when done.
	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs: Track api changes.
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.EncapsulateFieldDialog.cs:
	  Updated.
	* Makefile.am: Removed unneeded reference.
	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Track api changes. Don't
	  switch worbench context when debugging.
	* MonoDevelop.Ide.Gui/Workbench.cs: If a file can't be loaded, show an
	  error, don't try to open it using an arbitrary display binding.

2008-06-12  Atsushi Enomoto  <atsushi@ximian.com>

	* MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs : fixed
	  message format string (found by translation).

2008-06-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs: added set for
	  indentstyle property.

2008-06-11  Mike Krüger <mkrueger@novell.com> 
